# detecting_changes_in_a_document

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  detailed_endpoints_check.json  docker-compose.streamlit.yml  docker-compose.yml  endpoints_check_results.json  rebuild.sh  service_analysis_report.md  test.md
backend/: Dockerfile  pyproject.toml  requirements.txt  run_app.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/database/: connection.py
backend/app/models/: __init__.py  analysis_result.py  regulation.py  service.py
backend/app/schemas/: analysis.py
backend/app/services/: diff_analyzer.py  document_processor.py  llm_analyzer.py  metrics.py  regulatory_matcher.py  report_generator.py
db/: init.sql
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: AnalysisButton.tsx  DocumentUpload.tsx  LazyComponents.tsx  ResultsTable.tsx
frontend/src/services/: api.ts  webVitals.ts
frontend/src/stores/: documentStore.ts
frontend/src/types/: index.ts
monitoring/: README.md  alert_rules.yml  alertmanager.yml  docker-compose.monitoring.yml  prometheus.yml
monitoring/grafana/dashboards/: infrastructure.json  oozo-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
streamlit_app/: Dockerfile  QUICK_START.md  README.md  app.py  env_example.txt  requirements.txt  run.sh  test_app.py
streamlit_app/.streamlit/: config.toml
